--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ body>main {
 }
 
 .grid-container {
+    background-color: #fff;
     margin: 0 auto;
     width:400px;
     height: 400px;
@@ -78,4 +79,40 @@ body>main {
 .options {
     margin: 0;
     padding: calc(1rem * 2) 1rem;
+    z-index: 5;
+}
+
+.options button {
+    padding-top: 0.35rem;
+    padding-bottom: 0.35rem;
+}
+
+.color-container {
+    transition: all 0.5s;
+    position: absolute;
+    width: 100px;
+    height: 46px;
+    top:165px;
+    left:215px;
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    padding: 5px 5px 5px 60px;
+    z-index: 4;
+}
+
+#color-input:focus {
+    box-shadow: none;
+}
+
+#color-input {
+    border-radius: 50px;
+    border: 0;
+    padding: 0;
+    height: 100%;
+}
+
+#color-input::-webkit-color-swatch {
+    /* border: 1px solid hsl(205deg, 20%, 32%); */
+    border-radius: 50px;
 }
