--- a/style.css
+++ b/style.css
@@ -12,11 +12,6 @@
     --modal-overlay-background-color: rgba(52,51,50,0.8);
 }
 
-body {
-    height: 100vh;
-    overflow: hidden;
-}
-
 h1 {
     font-size: larger;
 }
@@ -65,6 +60,7 @@ body>main {
 
 .content {
     display: flex;
+    gap: 20%;
 }
 
 #size-display {
@@ -90,7 +86,6 @@ body>main {
 
 .color-container, #toggle-grid {
     transition: all 0.5s;
-    position: absolute;
     width: 100px;
     height: 46px;
     /* top:165px;
@@ -106,11 +101,12 @@ body>main {
     display: flex;
     justify-content: center;
     align-items: center;
-    top:165px;
-    right:315px;
+    top: calc(1rem * 2);
+    margin-left: -20px;
 }
 
 .color-container {
+    position: absolute;
     top:165px;
     left:215px;
 }
@@ -127,6 +123,11 @@ body>main {
 }
 
 #color-input::-webkit-color-swatch {
-    /* border: 1px solid hsl(205deg, 20%, 32%); */
+    cursor: pointer;
     border-radius: 50px;
+}
+
+.grid-toggle-container {
+    display:flex;
+    align-items: baseline;
 }
